--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "activityBar.background": "#292B4A",
         "titleBar.activeBackground": "#393C67",
         "titleBar.activeForeground": "#FAFAFC"
-    }
+    },
+    "cSpell.words": [
+        "ویژه"
+    ]
 }
